indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.2***

****	Fix missing ; in ContAssign::verilog_text, bug177.  [Nicolas Wilhelm]

****	Fix multi-dimensional arrayed typedefs, bug183.  [Vesselin Kavalov]

****	Fix "assert () else" action_blocks.  [Vesselin Kavalov]

****	Fix typedef scoping under anonymous begin blocks.

* Verilog::Language 3.221 2009/10/28

****	Fix SystemPerl hitting "undefined find_interface..." in 3.220.

****	Fix erroring on strings with backslashed newlines, bug168. [Pete Nixon]

****	Fix compile error on RHEL3 with gettext, bug169. [Marek Rouchal]

****	Fix line number miscounting with `pragma.

* Verilog::Language 3.220 2009/09/30

**	Add parsing of "assign", including SigParser::contassign callback,
	Netlist::ContAssign object, and related accessors.

***	Several code speedups to vhier, Verilog::Netlist, and the parsers.

***	Add Preproc::getall to fetch all text instead of line-by-line.

***	Add Parser::new(use_cb_{name}=>0) option to speed parsing.

***	Add SigParser/Netlist::new(use_vars=>0) option to speed parsing.

****	Fix deep defines causing flex scanner overflows. [Brad Dobbie]

****	Fix preprocessing commas in deep parameterized macros. [Brad Dobbie]

****	Fix Preproc::defSubstitute not being called on parameterized macros.

****	Fix Perl 5.8.8 compile error, bug115. [Marek Rouchal]

* Verilog::Language 3.213 2009/09/10

***	Improved warning when "do" used as identifier.

****	Fix compilation and installation on MacOS 10.4. [Robert Guenzel]

****	Fix escaped preprocessor identifiers, bug106. [Nimrod Gileadi]

****	Fix Perl 5.8.8 compile error, bug115. [Marek Rouchal]

****	Fix Perl 5.8.0 compile error with callbackgen. [Kjeld Svendsen]

* Verilog::Language 3.212 2009/07/20

***	Fix syntax errors when using vhier/Netlist with --language 1364-2001.

****	Fix dotted expressions returning "..", bug98. [Saul Cuellar]

****	Fix Getopt::file_path to expand environment variables in filenames.
