@@ -94,5 +94,6 @@ verilog/inc1.v:181: beginend
 verilog/inc1.v:182: "beginend" 
 verilog/inc1.v:188:  got_escaped
 verilog/inc1.v:190: Not a \`define
-verilog/inc1.v:197: x,y)--bee submacro has comma paren
-verilog/inc1.v:198: `line 198 "verilog/inc1.v" 2
+verilog/inc1.v:198: x,y)--bee submacro has comma paren
+verilog/inc1.v:203: $display("bits %d %d", $bits(foo), `10);
+verilog/inc1.v:204: `line 204 "verilog/inc1.v" 2
